fix overflow hidden issue

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,12 +1,16 @@
 .navbar {
+    box-sizing: border-box;
     width:100%;
     height: 60px;
     background-color: #131921;
     display: grid;
     grid-template-columns: 300px 800px 400px;
+    grid-template-rows: 1fr;
+    overflow:hidden;
 }
 
 .one {
+    
     grid-column: 1/span 1;
     color:white;
 }
@@ -17,8 +21,25 @@
 }
 
 .three {
+    
+
     grid-column: 3/span 1;
     color:white;
 
 }
 
+.element {
+    margin-top: 5px
+}
+
+.loginDiv {
+    
+}
+
+.p1 {
+    
+}
+
+.p2 {
+    
+}
